--- a/client/src/components/layout/Navbar.css
+++ b/client/src/components/layout/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: #1976d2 !important;
+    background-color: #0c0056 !important;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15) !important;
     position: sticky;
     top: 0;
